--- a/src/sass/blocks/_сonsultation.scss
+++ b/src/sass/blocks/_сonsultation.scss
@@ -1,10 +1,23 @@
-.consultation{
+.consultation {
   min-height: 680px;
   padding: 100px 0 92px 0;
   background: url("../../img/consultation.jpg") center (center/cover) no-repeat;
-  &__descrt{
+
+  &__descrt {
     color: white;
     font-weight: 500;
     font-size: 20px;
+  }
+
+  .error {
+    border: 1px solid red;
+    margin-bottom: 15px;
+  }
+
+  label.error {
+    color: white;
+    border: none;
+    text-align: center;
+    margin-bottom: 15px;
   }
 }
