--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,6 +9,7 @@
   margin: 0 auto;
 }
 
+@import "base/animations";
 @import 'blocks/promo';
 @import 'blocks/header.scss';
 @import 'blocks/buttons';
@@ -20,3 +21,4 @@
 @import "blocks/catalog";
 @import "blocks/footer";
 @import "blocks/modals";
+@import "blocks/pageup";
