--- a/src/sass/blocks/_footer.scss
+++ b/src/sass/blocks/_footer.scss
@@ -54,4 +54,10 @@
     justify-content: center;
     align-items: center;
   }
+
+  iframe{
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
 }
